ambient/080-authorization/01-mtls-default-strict-policy.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mtls-default-strict-policy
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
