ambient/080-authorization/04-deny-all-L7-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: travel-portal-deny-all
  namespace: travel-portal
spec:
  targetRefs:
  - kind: Gateway
    group: gateway.networking.k8s.io
    name: waypoint-travel-portal
  action: DENY
  rules:
  - {}
