ambient/080-authorization/05-deny-all-L4-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: travel-portal-deny-all-l4
  namespace: travel-portal
spec:
  action: DENY
  rules:
  - {}
